deploy/k8s/overlays/digitalocean-staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: programmable-secrets-staging
  labels:
    name: programmable-secrets-staging
