deploy/k8s/overlays/digitalocean-staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: programmable-secrets-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
spec:
  ingressClassName: nginx
  tls:
    - secretName: ps-hol-org-le
      hosts:
        - ps.hol.org
  rules:
    - host: ps.hol.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: programmable-secrets
                port:
                  name: http
